--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -20,18 +20,18 @@ The migration process is performed with CloudForms, a user interface for managin
 
 The infrastructure migration has the following key steps:
 
-. Planning the migration (xref:Planning_the_migration[])
+. xref:Planning_the_migration[Planning the migration]
 +
 * Assessing your source and target environments to ensure sufficient resources
 * Formulating strategies by following recommendations to minimize the impact on your users
 
-. Preparing the environment for migration (xref:Preparing_the_environment_for_migration[])
+. xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
 +
 * Extending the source environment's network to the target environment and checking the source virtual machines for anything that might interfere with the migration process
 * Configuring the target environment's storage and networks, installing software, and adding the providers to CloudForms
 * Configuring the conversion hosts (Red Hat Virtualization hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`) in CloudForms
 
-. Migrating the infrastructure in CloudForms (xref:Migrating_the_infrastructure[])
+. xref:Migrating_the_infrastructure[Migrating the infrastructure in CloudForms]
 +
 * Mapping the source and target infrastructures
 * Creating and running a migration plan (see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[] for migration process details)
