--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
@@ -3,29 +3,18 @@
 
 Migrating the infrastructure involves the following key tasks:
 
-. Mapping the resources of your source environment to your target environment (xref:Creating_an_infrastructure_mapping[])
+. xref:Creating_an_infrastructure_mapping[], to map the resources of your source environment to your target environment
 
-. Check the following prerequisites to see whether they apply to your migration:
+. Checking whether the following options are relevant for your migration:
 
-.. Creating a CSV file (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[])
-* Mandatory, if you are migrating source virtual machines that have been migrated in the past
-* Optional, but recommended, for large migrations
+* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], if you are migrating source virtual machines that have been migrated in the past. A CSV file is optional, but recommended, for large migrations.
 
-.. Creating a `RHEL premigration` Ansible playbook (xref:Creating_a_rhel_premigration_playbook[])
-* Mandatory, if you are migrating source virtual machines running RHEL or other Linux-based operating system
+* xref:Creating_a_rhel_premigration_playbook[], if you are migrating source virtual machines running RHEL or other Linux-based operating system
 
-.. Adding Ansible playbooks to CloudForms (xref:Adding_ansible_playbooks_to_cloudforms[])
-* Mandatory, if you are creating a `RHEL premigration` Ansible playbook
-* Optional, for automated premigration and postmigration tasks
+* xref:Adding_ansible_playbooks_to_cloudforms[], if you are using Ansible playbooks, such as the `RHEL premigration` playbook, to automate premigration and postmigration tasks
 
-. Creating a migration plan (xref:Creating_and_running_a_migration_plan[])
-. Running a migration plan (xref:Creating_and_running_a_migration_plan[])
-
-[IMPORTANT]
-====
-Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
-====
+. xref:Creating_and_running_a_migration_plan[]
 
 include::modules/proc_Creating_an_infrastructure_mapping.adoc[leveloffset=+1]
-include::modules/con_Migration_plan_prerequisites.adoc[leveloffset=+1]
+include::modules/con_Migration_plan_options.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_running_a_migration_plan.adoc[leveloffset=+1]
