--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -9,9 +9,9 @@ To troubleshoot migration errors:
 
 * Check the following common issues and mistakes:
 
-** Infrastructure mapping errors (xref:Infrastructure_mapping_errors[])
-** Migration plan errors (xref:Migration_plan_errors[])
-** Virtual machine migration errors (xref:Virtual_machine_migration_errors[])
+** xref:Infrastructure_mapping_errors[]
+** xref:Migration_plan_errors[]
+** xref:Virtual_machine_migration_errors[]
 
 See xref:Known_issues[] for information about obtaining critical updates and about issues that will be addressed in a future release.
 
