--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -53,4 +53,4 @@ If you add or remove providers or provider objects from an infrastructure mappin
 ====
 |===
 
-After you have created a successful infrastructure mapping, review the migration plan prerequisites to see whether they apply to your migration (xref:Migration_plan_prerequisites[]).
+After you have created a successful infrastructure mapping, review the migration plan prerequisites to see whether they apply to your migration (xref:Migration_plan_options[]).
