--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_running_a_migration_plan.adoc
@@ -7,10 +7,10 @@ You create a migration plan using the *Create Migration Plan* wizard.
 
 You run a migration plan by selecting a *Schedule* option in the wizard:
 
-* *Save migration plan to run later* (see xref:Running_migration_plan_future[Running a migration plan in the future] for details)
-* *Start migration immediately* (see xref:Running_migration_plan_immediately[Running a migration plan immediately] for details)
+* *Save migration plan to run later*
+* *Start migration immediately*
 +
-To cancel a migration plan that has started, see xref:Canceling_a_migration_plan[(Optional) Canceling a migration plan in progress].
+To cancel a migration plan that has started, see xref:Canceling_a_migration_plan[].
 
 [NOTE]
 ====
@@ -58,7 +58,7 @@ Virtual machines with a duplicate `Name` field and no optional field to distingu
 
 . Click *Next*.
 
-If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[Migration plan errors].
+If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[].
 
 .<a|*Instance Properties*
 
@@ -78,8 +78,8 @@ If a flavor is too small for the source virtual machine, it is marked with an as
 |*Schedule*
 .<a|. Select a schedule option:
 
-* *Save migration plan to run later* (see xref:Running_migration_plan_immediately[Running a migration plan in the future])
-* *Start migration immediately* (see xref:Running_migration_plan_immediately[Running a migration plan immediately])
+* *Save migration plan to run later* (see xref:Running_migration_plan_immediately[])
+* *Start migration immediately* (see xref:Running_migration_plan_immediately[])
 
 . Click *Create*.
 
@@ -88,7 +88,7 @@ If a flavor is too small for the source virtual machine, it is marked with an as
 |===
 
 [id="Running_migration_plan_immediately"]
-.Running a migration plan immediately
+== Running a migration plan immediately
 
 The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time.
 
@@ -106,7 +106,7 @@ The counter that displays the migration plan progress in menu:Compute[Migration 
 include::proc_Validating_a_migration_plan.adoc[]
 
 [id="Running_migration_plan_future"]
-.Running a migration plan in the future
+== Running a migration plan in the future
 
 The migration plan is saved in *Migration Plans Not Started* and will not run until you schedule or run it.
 
@@ -123,7 +123,7 @@ To edit or delete a migration plan, click the *More Actions* icon.
 include::proc_Validating_a_migration_plan.adoc[]
 
 [id="Canceling_a_migration_plan"]
-.(Optional) Canceling a migration plan in progress
+== (Optional) Canceling a migration plan in progress
 
 To cancel a migration plan that has started:
 
