--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -14,6 +14,11 @@ The following recommendations will minimize the impact of the migration on your 
 
 * Schedule your migration carefully, to minimize the impact on your users.
 * Prepare your users for downtime.
++
+[IMPORTANT]
+====
+Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
+====
 * Stagger the migration schedules.
 * Move critical applications during maintenance windows.
 
