--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
@@ -5,10 +5,10 @@
 
 If a virtual machine fails to migrate, check the following possible causes:
 
-* IP address errors (xref:IP_address_errors[])
-* VMware environment errors (xref:VMware_environment_errors[])
-* Red Hat Virtualization errors (xref:RHV_VM_migration_failure[])
-* OpenStack Platform errors (xref:OSP_VM_migration_failure[])
+* xref:IP_address_errors[]
+* xref:VMware_environment_errors[]
+* xref:RHV_VM_migration_failure[]
+* xref:OSP_VM_migration_failure[]
 
 [[IP_address_errors]]
 == IP address errors
