--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Validating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Validating_a_migration_plan.adoc
@@ -4,6 +4,6 @@
 
 When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows successfully migrated virtual machines.
 
-A `Denied State` error indicates a problem with the conversion hosts (see xref:Denied_state_error[Denied state error] for more information).
+A `Denied State` error indicates a problem with the conversion hosts (see xref:Denied_state_error[Denied state error] in xref:Migration_plan_errors[]).
 
 To troubleshoot a failed migration, see xref:Troubleshooting[].
