--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Infrastructure_mapping_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Infrastructure_mapping_errors.adoc
@@ -3,17 +3,8 @@
 [id="Infrastructure_mapping_errors"]
 = Infrastructure mapping errors
 
-.General error
-
 [id="Infrastructure_mapping_missing_resources"]
-* `Networks missing`, `Datastores missing`, and `Clusters missing` error messages: If you create an infrastructure mapping and change a source or target provider, the provider's object IDs change. Delete the infrastructure mapping and create a new one.
-
-.Red Hat Virtualization errors
-
-[id="RHV_infrastructure_mapping_missing_networks_datastore"]
-* `Networks missing` and `Datastores missing` error messages. If you refresh the hosts, the provider's object IDs change. Delete the infrastructure mapping and create a new one.
-
-.OpenStack Platform error
+* `Networks missing`, `Datastores missing`, and `Clusters missing` error messages: If you create an infrastructure mapping and change a source or target provider or refresh RHV hosts, the provider's object IDs change. Delete the infrastructure mapping and create a new one.
 
 [id="OpenStack_storage_not_detected"]
-* Storage not detected: If the target block storage does not appear while you are creating an infrastructure mapping, check that you have set at least one link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[`volume type`] for the storage.
+* OpenStack Platform block storage not detected when creating an infrastructure mapping: Check that you have set at least one link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[`volume type`] for the storage.
