--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
@@ -5,11 +5,13 @@
 
 Check the following options to see whether they apply to your migration:
 
-* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], if you are migrating source virtual machines that have been migrated in the past. A CSV file is optional, but recommended, for large migrations.
+* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], to add them to the migration plan. Previously migrated virtual machines cannot be discovered automatically by the migration plan because they are marked as `migrated` in the CloudForms database.
++
+A CSV file is optional, but recommended, for large migrations. Adding virtual machines with a CSV file is faster than manually selecting virtual machines for migration or selecting an OpenStack Platform security group and flavor for each virtual machine.
 
-* xref:Creating_a_rhel_premigration_playbook[], if you are migrating source virtual machines running RHEL or other Linux-based operating system
+* xref:Creating_a_rhel_premigration_playbook[], to ensure that their IP addresses are accessible after migration
 
-* xref:Adding_ansible_playbooks_to_cloudforms[], if you are using Ansible playbooks, including the `RHEL premigration` playbook, to automate premigration and postmigration tasks in the migration plan
+* xref:Adding_ansible_playbooks_to_cloudforms[], if you are using Ansible playbooks, including the `RHEL premigration` playbook
 
 If you are not using these options, go to xref:Creating_and_running_a_migration_plan[].
 
