--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 // con_Migration_plan_options.adoc
 [id="Adding_ansible_playbooks_to_cloudforms"]
-= Adding Ansible playbooks to CloudForms
+= Adding Ansible playbooks to CloudForms for premigration and postmigration tasks
 
 You can add Ansible playbooks to CloudForms to perform automated premigration and postmigration tasks on specific virtual machines, for example, to remove webservers from a load-balancing pool before migration and return them to the pool after migration.
 
