--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -13,17 +13,12 @@ A decrease maximum number of concurrent migrations affects only future migration
 
 [IMPORTANT]
 ====
-The maximum number of concurrent migrations for a conversion host should not exceed `20` for VDDK or `40` for SSH. Exceeding these limits can cause network overload and migration failure.
+If you are using VDDK, the value of *Maximum concurrent migrations per conversion host* should not exceed `20`. Otherwise, network overload will cause the migration to fail.
 ====
 
 * To change the maximum number of concurrent migrations for all conversion hosts and providers:
 +
-. Click menu:Compute[Migration > Migration Settings] in CloudForms and select a value for *Maximum concurrent migrations per conversion host* or *Maximum concurrent migrations per provider*.
-+
-[NOTE]
-====
-The value of *Maximum concurrent migrations per conversion host* is constrained so that it cannot be greater than *Maximum concurrent migrations per provider*.
-====
+. Click menu:Compute[Migration > Migration Settings] in CloudForms and select a value for *Maximum concurrent migrations per conversion host* or *Maximum concurrent migrations per provider*. (The value of *Maximum concurrent migrations per conversion host* is constrained so that it cannot be greater than *Maximum concurrent migrations per provider*.)
 
 . Click *Apply*.
 
