--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 // con_Migration_plan_options.adoc
 [id="Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan"]
-= Creating a CSV file to add previously migrated virtual machines to the migration plan
+= Creating a CSV file for previously migrated virtual machines
 
 If you are migrating virtual machines that were migrated in the past, you should create a CSV file to add the virtual machines to the migration plan, because the migration plan cannot discover them automatically.
 
