--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 // con_Migration_plan_options.adoc
 [id="Creating_a_rhel_premigration_playbook"]
-= Creating a `RHEL premigration` playbook
+= Creating a `RHEL premigration` playbook for RHEL/Linux source virtual machines
 
 If you are migrating virtual machines running RHEL or other Linux-based operating system, you should create and run a `RHEL premigration` playbook. Otherwise the IP addresses of the migrated virtual machines will not be accessible.
 
