--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -27,14 +27,16 @@ The infrastructure migration has the following key steps:
 
 . xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
 +
-* Extending the source environment's network to the target environment and checking the source virtual machines for anything that might interfere with the migration process
-* Configuring the target environment's storage and networks, installing software, and adding the providers to CloudForms
-* Configuring the conversion hosts (Red Hat Virtualization hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`) in CloudForms
+* Preparing the source network and checking the virtual machines for anything that might hinder the migration process
+* Configuring the target storage and networks, installing software, and adding the providers to CloudForms
+* Configuring the conversion hosts (conversion hosts are RHV hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`) in CloudForms
 
 . xref:Migrating_the_infrastructure[Migrating the infrastructure in CloudForms]
 +
 * Mapping the source and target infrastructures
-* Creating and running a migration plan (see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[] for migration process details)
+* Creating and running a migration plan
++
+See xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[] for migration process details.
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
