--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
@@ -5,8 +5,8 @@ During the planning phase, you will formulate a specific migration goal, for exa
 
 The following information can help you plan your migration:
 
-* Questions about resources, guest operating systems, and migration duration (xref:Questions_to_ask_before_migration[])
-* Recommendations for minimizing the impact of the migration on your environment (xref:Recommendations_for_migration[])
+* xref:Questions_to_ask_before_migration[], covering resources, guest operationg systems, and migration duration
+* xref:Recommendations_for_migration[], to minimize the impact of the migration on your environment
 
 include::modules/ref_Questions_to_ask_before_migration.adoc[leveloffset=+1]
 include::modules/ref_Recommendations_for_migration.adoc[leveloffset=+1]
