--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
@@ -3,20 +3,18 @@
 
 Preparing the environment for migration involves the following key steps:
 
-. Preparing the VMware network and virtual machines (xref:Preparing_the_vmware_source_environment[])
-. Configuring the storage and networks, installing software, and adding providers to CloudForms in the target environment:
+. xref:Preparing_the_vmware_source_environment[]
+. Configuring the target storage and networks, installing software, and adding providers to CloudForms in the target environment:
 
-** Red Hat Virtualization (xref:Preparing_the_rhv_target_environment[])
-** OpenStack Platform (xref:Preparing_the_osp_target_environment[])
+** xref:Preparing_the_rhv_target_environment[]
+** xref:Preparing_the_osp_target_environment[]
 
-. Configuring the conversion hosts in CloudForms (xref:Configuring_the_conversion_hosts[])
+. xref:Configuring_the_conversion_hosts[] in CloudForms
 +
-You can change the maximum number of concurrent migrations for conversion hosts or providers for better performance and control of the migration process (xref:Changing_the_maximum_number_of_concurrent_migrations[]).
+You can xref:Changing_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process.
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
 include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
 include::modules/proc_Configuring_the_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
-
-// PLACEHOLDER: MIGRATION THROTTLING
