--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,23 +1,18 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-If a migration failure was caused by external factors, such as network disruption, you can retry the migration (xref:Retrying_a_failed_migration_plan[]).
+To troubleshoot migration errors, see the following:
 
-To troubleshoot migration errors:
+* xref:Migration_logs[]
 
-* Check the migration logs (xref:Migration_logs[])
-
-* Check the following common issues and mistakes:
+* xref:Common_issues_and_mistakes[]:
 
 ** xref:Infrastructure_mapping_errors[]
 ** xref:Migration_plan_errors[]
-** xref:Virtual_machine_migration_errors[]
+** xref:Virtual_machine_migration_errors[] describes configuration errors in the source/target environments and postmigration IP address errors
 
-See xref:Known_issues[] for information about obtaining critical updates and about issues that will be addressed in a future release.
+* xref:Known_issues[] provides information about critical updates and issues that will be addressed in a future release.
 
-include::modules/proc_Retrying_a_failed_migration_plan.adoc[leveloffset=+1]
 include::modules/ref_Migration_logs.adoc[leveloffset=+1]
-include::modules/ref_Infrastructure_mapping_errors.adoc[leveloffset=+1]
-include::modules/ref_Migration_plan_errors.adoc[leveloffset=+1]
-include::modules/ref_Virtual_machine_migration_failure.adoc[leveloffset=+1]
+include::modules/assembly_Common_issues_and_mistakes.adoc[leveloffset=+1]
 include::modules/ref_Known_issues.adoc[leveloffset=+1]
