--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
@@ -5,7 +5,9 @@
 
 Check the following options to see whether they apply to your migration:
 
-* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], to add them to the migration plan. Previously migrated virtual machines cannot be discovered automatically by the migration plan because they are marked as `migrated` in the CloudForms database.
+* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], if the source virtual machines have been migrated in the past.
++
+Previously migrated virtual machines cannot be discovered by the migration plan because they are marked as `migrated` in the CloudForms database.
 +
 A CSV file is optional, but recommended, for large migrations. Adding virtual machines with a CSV file is faster than manually selecting virtual machines for migration or selecting an OpenStack Platform security group and flavor for each virtual machine.
 
