--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -9,13 +9,13 @@ This diagram describes the workflow of a migration to Red Hat Virtualization.
 
 image::vmware_to_rhv_migration_workflow.png[]
 
-image:circle_step_numbers/1.png[25,25] You run the migration plan in CloudForms.
+image:circle_step_numbers/1.png[25,25] You run a xref:Creating_and_running_a_migration_plan[migration plan] in CloudForms.
 
 image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to locate the source virtual machines.
 
-image:circle_step_numbers/3.png[25,25] If you are using the `VMware Virtual Disk Development Kit` (VDDK) datapath transformation option, CloudForms captures the ESXi host fingerprint for authentication during the virtual machine conversion process.
+image:circle_step_numbers/3.png[25,25] If you are using the `VMware Virtual Disk Development Kit` (VDDK) xref:Choosing_vddk_or_ssh_transformation[transformation option], CloudForms captures the ESXi host fingerprint for authentication during the virtual machine conversion process.
 
-image:circle_step_numbers/4.png[25,25] Using the attributes defined for the RHV environment, CloudForms initiates communication with the conversion host. (A conversion host is a RHV host with `virt-v2v` and `virt-v2v-wrapper` installed.)
+image:circle_step_numbers/4.png[25,25] Using the attributes defined for the RHV environment, CloudForms initiates communication with the conversion hosts. (A xref:Configuring_the_conversion_hosts[conversion host] is a RHV host running `virt-v2v` and `virt-v2v-wrapper`.)
 
 image:circle_step_numbers/5.png[25,25] `virt-v2v-wrapper` connects to the source datastore through the ESXi host. `virt-v2v` streams the source disks to the target data domain and converts the source disks.
 
