--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -7,7 +7,7 @@ Prepare the source environment's network and virtual machines for migration.
 
 .Preparing the source network
 
-* Extend the source network to the target environment.
+* Extend the VMware network to the target environment.
 
 [IMPORTANT]
 ====
@@ -24,10 +24,10 @@ Ensure that IP addresses, VLANs, and other network configurations are not change
 
 . Check that each NIC has no more than one IPv4 and/or one IPv6 address.
 
-. Install VMware Tools to capture IP addresses (see link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[Installing VMware Tools] for instructions).
+. Install VMware Tools to capture IP addresses (see link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[Installing VMware Tools] in the VMware documentation for instructions).
 
 . Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). *Special characters and spaces are not permitted.*
 
 . Red Hat Virtualization only: Check that source virtual machine names do not duplicate the names of existing RHV virtual machines.
 
-You are ready to prepare the target environment.
+You are ready to prepare the target environment, xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform].
