--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
@@ -1,14 +1,14 @@
 // Module included in the following assemblies:
 // assembly_Troubleshooting.adoc
 [id="Migration_logs"]
-= Checking migration logs
+= Migration logs
 
-You can check the migration logs and the CloudForms automation log for errors.
+You can check the conversion host migration logs, playbook logs (if relevant), and the CloudForms log for errors.
 
-.Downloading the migration logs
+.Conversion host and playbook logs
 
 . In CloudForms, click menu:Compute[Migration Plans > Migration Plans Complete].
-. Click a migration plan name to go to the details view.
+. Click a migration plan name to view its details.
 . Click *Download Log* of a virtual machine and select a log from the dropdown list:
 
 * *Premigration log:* This option only appears if a premigration playbook is used.
@@ -18,11 +18,11 @@ You can check the migration logs and the CloudForms automation log for errors.
 
 [IMPORTANT]
 ====
-Both the Migration log (`virt-v2v`) and the `virt-v2v-wrapper` log are required for bug analysis. If you open a link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support call], you should provide both logs.
+Both conversion host logs, `virt-v2v` and `virt-v2v-wrapper`, are required for bug analysis if you open a Red Hat Support call at link:https://access.redhat.com/support/cases/#/case/new[].
 ====
 
 [id="CloudForms_log"]
-.Accessing the CloudForms log
+.CloudForms log
 
 This log traces the orchestration of the virtual machine migration in CloudForms.
 
