--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -19,20 +19,10 @@ If you exceed the capabilities of your environment, the migrations will fail. Th
 
 What operating systems can I migrate?::
 * For a list of supported guest operating systems, see link:https://access.redhat.com/articles/1351473[].
-* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[].
-+
-[NOTE]
-====
-Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
-====
+* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[]. Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
 
 What resources does my target environment require?::
-* Your target environment must be large enough to run the migrated virtual machines in addition to the source virtual machines.
-+
-[NOTE]
-====
-The source virtual machines are not affected by the migration process.
-====
+* Your target environment must be large enough to run the migrated virtual machines in addition to the source virtual machines. The source virtual machines are not affected by the migration process.
 
 What am I missing?::
 * Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
