--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
@@ -10,7 +10,7 @@ CloudForms requires a minimum of one Ansible playbook repository, one playbook, 
 [id="Creating_an_Ansible_service_catalog_item"]
 .Procedure
 
-. Enable the `Embedded Ansible` role (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#enabling-embedded-ansible-server-role[Enabling the Embedded Ansible Server Role] in _Red Hat CloudForms: Managing Providers_).
+. Enable the `Embedded Ansible` server role (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#enabling-embedded-ansible-server-role[Enabling the Embedded Ansible Server Role] in _Red Hat CloudForms: Managing Providers_).
 
 . Add an Ansible playbook repository (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#adding-a-playbook-repository[Adding a Playbook Repository] in _Red Hat CloudForms: Managing Providers_).
 
@@ -18,4 +18,4 @@ CloudForms requires a minimum of one Ansible playbook repository, one playbook, 
 
 . Add a playbook as an Ansible service catalog item (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/provisioning_virtual_machines_and_instances/#create-playbook-service-catalog-item[Creating an Ansible Playbook Service Catalog Item] in _Red Hat CloudForms: Provisioning Virtual Machines and Instances_).
 
-You will select the playbooks and the virtual machines on which they run in the xref:Advanced_options_screen[Advanced Options screen] when you create the migration plan (xref:Creating_and_running_a_migration_plan[]).
+You will select the playbooks and the virtual machines on which they run in the xref:Advanced_options_screen[Advanced Options screen] when you (xref:Creating_and_running_a_migration_plan[create the migration plan]).
