--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
@@ -3,29 +3,43 @@
 [id="Configuring_the_conversion_hosts"]
 = Configuring the conversion hosts
 
-You select, authenticate, and configure your conversion hosts in CloudForms.
+You can select, authenticate, and configure your conversion hosts in CloudForms.
 
-These procedures assume that you know the following:
+These procedures assume that you have determined the following:
 
-* How many conversion hosts you require (xref:Deciding_how_many_conversion_hosts_to_create[])
-* Whether to use VDDK or SSH (xref:Choosing_vddk_or_ssh_transformation[])
+* xref:Deciding_how_many_conversion_hosts_to_create[How many conversion hosts you require]
+* xref:Choosing_vddk_or_ssh_transformation[Whether to use VDDK or SSH]. For VDDK, the xref:VDDK_only_Downloading_and_copying_VDDK[Prerequisite for VDDK transformation]] applies.
 
-.Prerequisite for VDDK
+To upgrade the conversion hosts:
+
+* Red Hat Virtualization:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# yum update
+----
+
+* OpenStack Platform: xref:Deploying_osp_conversion_hosts[Download the latest conversion host appliance and re-deploy the conversion hosts]
+
+.Prerequisite for VDDK transformation
 [id='VDDK_only_Downloading_and_copying_VDDK']
 
 * Download the VMware Virtual Disk Development Kit:
 +
 . Navigate to link:https://www.vmware.com/support/pubs/[].
-. Click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
+. Click `VMware SDK & API Product Documentation` to expand
+. Click `VMware Virtual Disk Development Kit (VDDK)`.
 . Click `Latest Releases` and select the latest VDDK release.
-. Download the VDDK package, +VMware-vix-disklib-_version_.x86_64.tar.gz+, and record its path for the conversion host configuration.
+. Download the VDDK package (+VMware-vix-disklib-_version_.x86_64.tar.gz+) and record its path for the conversion host configuration procedure.
 
 .Procedure
 
 . In CloudForms, click menu:Compute[Migration > Migration Settings].
 . In the *Conversion Hosts* tab, click *Configure Conversion Host*.
 . Perform the following procedures in the *Configure Conversion Host* wizard:
-+
+
+PLACEHOLDER: CONVERSION HOST UI SCREENSHOT
+
 [cols="1,3", options="header"]
 |===
 |Screen |Procedure
@@ -33,7 +47,7 @@ These procedures assume that you know the following:
 .<a|. Select a *Provider Type*.
 . Select a *Provider*.
 
-. Select a Red Hat Virtualization *Cluster* or OpenStack Platform *Project*.
+. Select a Red Hat Virtualization cluster / OpenStack Platform project.
 
 . Click *Next*.
 |*Hosts*
@@ -42,18 +56,17 @@ These procedures assume that you know the following:
 |*Authentication*
 .<a|. Click *Browse* to browse to the SSH key or paste it in the *Conversion host SSH key* field.
 +
-[NOTE]
 ====
-* The Red Hat Virtualization Manager deploys a private SSH key on the conversion hosts in order to send commands and run playbooks. The default key file is `/etc/pki/ovirt-engine/keys/engine_id_rsa` on the Manager machine.
+* Red Hat Virtualization Manager deploys a private SSH key on the conversion hosts in order to send commands and run playbooks. The default key file is `/etc/pki/ovirt-engine/keys/engine_id_rsa` on the Manager machine.
 
 * The OpenStack Platform user uses a private SSH key to connect to the conversion hosts.
 ====
 
 . Select a *Transformation method*.
 
-. *SSH:* Click *Browse* to browse to the VMware hypervisors SSH key or paste it in the *VMware hypervisors SSH key* field.
+. *SSH:* Click *Browse* to browse to the SSH key or paste it in the *VMware hypervisors SSH key* field.
 +
-*VDDK:* Paste the path of the VDDK package in the *VDDK library path* field and click *Validate*.
+*VDDK:* Paste the path of the VDDK package in the *VDDK library path* field and click *Validate*. Wait for validation to complete.
 
 . Click *Configure*.
 |*Results*
@@ -63,17 +76,4 @@ These procedures assume that you know the following:
 
 The configured conversion hosts and status information, including error messages, appear in the *Configured Conversion Hosts* list.
 
-Optionally, click *Remove* to unconfigure a conversion host or *Retry* to retry a conversion host configuration.
-
-
-.Upgrading the conversion hosts
-
-* *Red Hat Virtualization:* Log in to the Manager machine using SSH and enter the following commands:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-# yum update
-# cp /usr/share/ansible/roles/oVirt.v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
-----
-
-* *OpenStack Platform:* Download the latest conversion appliance and create new conversion hosts.
+You can click *Remove* to unconfigure a conversion host or *Retry* to retry a conversion host configuration.
