--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
@@ -3,17 +3,17 @@
 [id="Creating_a_rhel_premigration_playbook"]
 = Creating a `RHEL premigration` playbook for RHEL/Linux source virtual machines
 
-If you are migrating virtual machines running RHEL or other Linux-based operating system, you should create and run a `RHEL premigration` playbook. Otherwise the IP addresses of the migrated virtual machines will not be accessible.
+If you are migrating virtual machines running RHEL or other Linux-based operating system, you should create and run a `RHEL premigration` playbook to ensure that their IP addresses are accessible after migration.
 
-The `RHEL premigration` playbook calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation), which performs the following tasks on the source virtual machines:
+The `RHEL premigration` playbook calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation). The `ims.rhel_premigration` role performs the following tasks on the source virtual machines:
 
 * Preserves the static IP address configuration by creating udev rules to associate the virtual machine's MAC address with its interface name
 
-* Installs the Red Hat Virtualization guest agent, which enables Red Hat Virtualization to report the IP address of the new virtual machine and to integrate it into the new environment (Red Hat Virtualization only)
+* Red Hat Virtualization only: Installs the Red Hat Virtualization guest agent, which enables Red Hat Virtualization to report the IP address of the new virtual machine and to integrate it into the new environment
 
 [NOTE]
 ====
-The `ims.rhel_premigration` role assumes that either the `rhel-6-server-rpms` or the `rhel-7-server-rpms` repository is enabled in the VMware virtual machine when it installs `qemu-guest-agent`. If you have disabled the repository, re-enable it in the RHEL premigration playbook.
+The `ims.rhel_premigration` role assumes that either the `rhel-6-server-rpms` or the `rhel-7-server-rpms` repository is enabled in the source virtual machine when it installs `qemu-guest-agent`. If you have disabled the repository, re-enable it in the RHEL premigration playbook.
 ====
 
 .`RHEL premigration` playbook example
@@ -25,4 +25,4 @@ The `ims.rhel_premigration` role assumes that either the `rhel-6-server-rpms` or
     - role: ims.rhel_pre_migration
 ----
 
-You will select this playbook as a premigration playbook service in the xref:Advanced_options_screen[Advanced options screen] when you create the migration plan (xref:Creating_and_running_a_migration_plan[]).
+You will select this playbook as a premigration playbook service in the xref:Advanced_options_screen[Advanced options screen] when you (xref:Creating_and_running_a_migration_plan[create the migration plan]).
