--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -3,54 +3,62 @@
 [id="Creating_an_infrastructure_mapping"]
 = Creating an infrastructure mapping
 
-The infrastructure mapping maps your source resources to target resources.
+The infrastructure mapping maps your source infrastructure to your target environment.
+
+[IMPORTANT]
+====
+If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have missing resource errors (see xref:Infrastructure_mapping_errors[]). You must delete the infrastructure mapping and create a new one.
+====
 
 .Procedure
 
 . Click menu:Compute[Migration > Infrastructure Mappings].
 . Click *Create Infrastructure Mapping*.
-. Perform the following procedures in the Infrastructure Mapping wizard:
+. Perform the following procedures in the *Create Infrastructure Mapping* wizard:
+
+image:Creating_infrastructure_mapping.png[]
 
 [cols="1,3", options="header"]
 |===
 ^|Screen ^|Procedure
 
 |*General*
-.<a|. Enter the infrastructure mapping name and (optional) description.
-. Select the target provider from the drop-down list.
+.<a|. Enter the infrastructure mapping *Name* and (optional) *Description*.
+. Select the *Target Provider*.
 . Click *Next*.
 
 |*Map Compute*
-.<a|. Select a source cluster and a target Red Hat Virtualization cluster or OpenStack Platform project.
+.<a|. Select a *Source Provider \ Datacenter \ Cluster* source cluster and a (RHV) *Target Provider \ Datacenter \ Cluster* or (OpenStack{nbsp}Platform) *Target Provider \ Project*.
 +
-*Red Hat Virtualization only:* A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;). The icon appears after a few seconds' delay for polling the clusters and refreshing the UI.
+====
+If the target cluster or project does not contain a conversion host, a warning icon (image:warning.png[height=15px]) appears. You can create and save an infrastructure mapping, but you must xref:Configuring_the_conversion_hosts[configure conversion hosts] before you can run a migration plan.
+====
+
 . Click *Add Mapping*. You can map additional clusters.
 . Click *Next*.
 
 |*Map Storage*
-.<a|. Select a source cluster from the drop-down list.
-. Select a source datastore and a target Red Hat Virtualization datastore or OpenStack Platform volume type.
-+
-*OpenStack Platform only:* If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected] in xref:Infrastructure_mapping_errors[].
+.<a|. Select a source cluster whose datastores you want to map.
+. Select a *Source Provider \ Datacenter \ Datastore* and (RHV) *Target Datastores* or
+(OpenStack{nbsp}Platform) *Target Provider \ Volume Type*. (If the OpenStack Platform volume type is missing, check that the `volume type` has been set. See xref:Infrastructure_mapping_errors[].)
+
 . Click *Add Mapping*. You can map additional datastores.
 . Click *Next*.
 
 |*Map Networks*
 .<a|. Select a source cluster from the drop-down list.
-. Select one or more source networks and a target network.
-+
-*OpenStack Platform only:* IMS supports both provider and tenant networks.
+. Select one or more from *Source Provider \ Datacenter \ Network* and a *Target Project \ Network*. (IMS supports both provider and tenant networks in OpenStack Platform.)
 
 . Click *Add Mapping*. You can map the networks of additional source clusters.
 . Click *Create*.
 
 |*Results*
 .<a|Click *Close*. Your infrastructure mapping is saved in menu:Compute[Migration > Infrastructure Mappings].
-
-[IMPORTANT]
-====
-If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have missing resource errors (see xref:Infrastructure_mapping_errors[]). You must re-create the infrastructure mapping.
-====
 |===
 
-After you have created a successful infrastructure mapping, review the migration plan prerequisites to see whether they apply to your migration (xref:Migration_plan_options[]).
+You can click an infrastructure mapping element to view its details:
+
+.Infrastructure Mappings list
+image:Infra_mappings_list.png[]
+
+After you have created an infrastructure mapping, check xref:Migration_plan_options[] to see whether they apply to your migration.
