--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_running_a_migration_plan.adoc
@@ -3,27 +3,25 @@
 [id="Creating_and_running_a_migration_plan"]
 = Creating and running a migration plan
 
-You create a migration plan using the *Create Migration Plan* wizard.
+You create and run a migration plan with the *Create Migration Plan* wizard.
 
-You run a migration plan by selecting a *Schedule* option in the wizard:
+In the *Schedule* screen of the wizard, you can select one of the following options:
 
 * *Save migration plan to run later*
 * *Start migration immediately*
-+
-To cancel a migration plan that has started, see xref:Canceling_a_migration_plan[].
 
-[NOTE]
-====
-Source virtual machines migrating to OpenStack Platform must be powered on at the time of migration.
-====
+To cancel a migration plan in progress, see xref:Canceling_a_migration_plan[].
 
-.Procedure
+If a migration fails because of external factors, such as network disruption, see xref:Retrying_a_failed_migration_plan[].
+
+== Creating a migration plan[[Creating_a_migration_plan]]
 
 . Click menu:Compute[Migration > Migration Plans].
-
 . Click *Create Migration Plan*.
+. Perform the following procedures in the *Create Migration Plan* wizard:
 
-. Perform the following procedures in the Create Migration Plan wizard:
+.Create Migration Plan wizard
+image:Create_Migration_Plan_screen.png[]
 
 [cols="1,3", options="header"]
 |===
@@ -31,55 +29,62 @@ Source virtual machines migrating to OpenStack Platform must be powered on at th
 |Procedure
 
 |*General*
-.<a|. Select the infrastructure mapping from the drop-down list.
+.<a|. Select an infrastructure mapping from the drop-down list.
 +
+====
 If you select an OpenStack Platform mapping, an *Instance Properties* screen appears after the *VMs* screen.
-
+====
 . Enter the migration plan name and (optional) description.
 . Select a virtual machine discovery method:
 
 * *Choose from a list of VMs discovered in the selected infrastructure mapping*
-* *Import a CSV file with a list of VMs to be migrated*
+* *Import a CSV file with a list of VMs to be migrated*.
++
+A xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] is required for previously migrated source virtual machines and highly recommended for large migrations.
+
 . Click *Next*.
 
 |*VMs*
-.<a|. If you selected *Choose from a list of VMs discovered in the selected infrastructure mapping*, select the virtual machines to be migrated.
+.<a|. If you selected *Choose from a list of VMs discovered in the selected infrastructure mapping*, select the virtual machines for migration.
 +
 If you selected *Import a CSV file with a list of VMs to be migrated*:
 
 .. Click *Import*.
 .. Browse to the CSV file and click *Open*.
 +
-.CSV file errors
-[NOTE]
 ====
-Virtual machines with a duplicate `Name` field and no optional field to distinguish them, or with duplicate optional fields, are marked with a red `x` and cannot be added to the migration plan.
+Virtual machines with a duplicate `Name` field and no `Host`/`Provider` field to distinguish them, or with a duplicate `Name` field and duplicate `Host`/`Provider` fields, are marked with a red `x`. Correct the CSV file and create a new migration plan.
 ====
 
 . Click *Next*.
 
-If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[].
+If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[] for possible causes.
 
 .<a|*Instance Properties*
 
 (OpenStack Platform only)
 .<a|. Click the pencil icon to edit the network or flavor of each selected virtual machine.
 +
-If a flavor is too small for the source virtual machine, it is marked with an asterisk (`*`). If you have not created flavors for the migration, CloudForms chooses from the available flavors.
+Flavors that are too small for the virtual machine are marked with an asterisk (`*`). If you have not created flavors for the migration, CloudForms tries to map the virtual machines to available flavors.
 . Click *Next*.
 
 .<a|*Advanced Options*
 
 .<a|[id="Advanced_options_screen"]
-. Select a premigration and/or postmigration playbook service from the dropdown lists.
+. Select a premigration and/or postmigration playbook service from the dropdown lists (see xref:Adding_ansible_playbooks_to_cloudforms[] for details)
 . Select the virtual machines on which to run the playbook services.
 . Click *Next*.
 
 |*Schedule*
 .<a|. Select a schedule option:
 
-* *Save migration plan to run later* (see xref:Running_migration_plan_immediately[])
-* *Start migration immediately* (see xref:Running_migration_plan_immediately[])
+* *Save migration plan to run later*
++
+The migration plan is saved in *Migration Plans Not Started* and will not run unless you schedule it (see xref:Scheduling_a_saved_migration_plan[]) or click *Migrate* to run the scheduled migration plan immediately.
+
+* *Start migration immediately*
++
+The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time. See xref:Viewing_migration_plan_progress[] for details.
 
 . Click *Create*.
 
@@ -87,50 +92,41 @@ If a flavor is too small for the source virtual machine, it is marked with an as
 .<a|Click *Close*.
 |===
 
-[id="Running_migration_plan_immediately"]
-== Running a migration plan immediately
+When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows the status of the migrated virtual machines. If there are errors, see xref:Troubleshooting[].
 
-The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time.
+In the migration plans list, you can click the *More Actions* icon (image:More_actions_icon.png[7]) to archive, edit, or delete a migration plan.
 
-To view the migration progress of individual virtual machines:
+[[Scheduling_a_saved_migration_plan]]
+== Scheduling a saved migration plan
+
+. Click *Migration Plans Not Started*.
+. Click the *Schedule* button of a migration plan.
+. In the *Schedule Migration Plan* window, select a date and time and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
+
+[[Viewing_migration_plan_progress]]
+== Viewing a migration plan in progress
 
 . Click *Migration Plans in Progress*.
-. Click the migration plan name to display the migration plan details.
-+
+. Click a migration plan name to view its details, including the status of the migrating virtual machines.
+
 [NOTE]
 ====
-The counter that displays the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter in the migration plan details. This is because the Migration Plans counter displays the total time for running the migration plan, while the details counter displays the time for migrating the virtual machines.
+The counter in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter in the migration plan details view. This is because the *Migration Plans* counter displays the total time for running the migration plan, while the details counter displays the time for migrating the virtual machines.
 ====
 
-:context: immediately
-include::proc_Validating_a_migration_plan.adoc[]
+[[Canceling_a_migration_plan]]
+== Canceling a migration plan in progress
 
-[id="Running_migration_plan_future"]
-== Running a migration plan in the future
-
-The migration plan is saved in *Migration Plans Not Started* and will not run until you schedule or run it.
-
-To schedule a migration plan:
-
-. Click the *Schedule* button.
-. In the *Schedule Migration Plan* window, select a date and time and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
-+
-You can click *Migrate* to run a scheduled migration plan immediately.
-
-To edit or delete a migration plan, click the *More Actions* icon.
-
-:context: in_the_future
-include::proc_Validating_a_migration_plan.adoc[]
-
-[id="Canceling_a_migration_plan"]
-== (Optional) Canceling a migration plan in progress
-
-To cancel a migration plan that has started:
-
-. In menu:Compute[Migration > Migration Plans], click *Migration Plans in Progress*.
+. Click *Migration Plans in Progress*.
 . Select a migration plan and click *Cancel Migration*.
 . Click *Cancel Migrations* to confirm the cancellation. The canceled migration appears in *Migration Plans Complete* with a red `x` indicating that the plan did not complete successfully.
 
-You can click *Retry* to run the migration plan immediately or *Schedule* to run the migration plan in the future.
+[[Retrying_a_failed_migration_plan]]
+== Retrying a migration plan
 
-Click the *More Actions* button to archive, edit, or delete the migration plan.
+. Delete newly created target virtual machines or instances, if any, to avoid name conflicts with the migrating VMware virtual machines.
+. Delete newly created disks in the target datastore to free up space.
+. OpenStack Platform only: Delete newly created network ports of failed instances.
+. Click menu:Compute[Migration > Migration Plans].
+. Click *Migration Plans Complete*.
+. Click the *Retry* button beside the failed migration plan.
