--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -8,15 +8,15 @@ include::ref_Software_compatibility_requirements.adoc[]
 
 . Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
 
-. Install Red Hat OpenStack Platform 13 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
+. Install Red Hat OpenStack Platform 13 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
 
-. Create provider networks for the target instances to preserve the IP addresses of the source virtual machines (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[Create a network] in the _Red Hat OpenStack Platform Networking Guide_).
+. Create provider networks for the target instances to preserve the IP addresses of the source virtual machines (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/networking_guide/#create_a_network[Create a network] in the _Red Hat OpenStack Platform Networking Guide_).
 
-. Create a project for the conversion hosts and whatever destination projects you require for the target instances (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[Create a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
+. Create a project for the conversion hosts and whatever destination projects you require for the target instances (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/users_and_identity_management_guide/#create_a_project[Create a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-. Ensure that the `admin` user has `member` and `admin` roles in the conversion and destination projects (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[Edit a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
+. Ensure that the `admin` user has `member` and `admin` roles in the conversion and destination projects (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/users_and_identity_management_guide/#edit_a_project[Edit a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-. Set at least one `volume type` for the target block storage (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-create-volume[Create a Volume] and link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volume-retype[Changing a Volume’s Type (Volume Re-typing)] in the _Red Hat OpenStack Platform Storage Guide_). Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
+. Set at least one `volume type` for the target block storage (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-create-volume[Create a Volume] and link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-volume-retype[Changing a Volume’s Type (Volume Re-typing)] in the _Red Hat OpenStack Platform Storage Guide_). Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
 
 . Ensure that the storage backends have sufficient space for the migrated virtual machines.
 
@@ -38,26 +38,25 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 +
 [NOTE]
 ====
-Do not remove or change a provider before, during, or after migration because these actions cause errors in infrastructure mappings and migration plans.
+Do not remove or change a provider before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
 
 . Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
 
-. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure (xref:Deciding_how_many_conversion_hosts_to_create[]).
+. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
 
-.Deploying OpenStack Platform conversion host instances
+.Deploying OpenStack Platform conversion host instances[[Deploying_osp_conversion_hosts]]
 
 . Navigate to link:https://access.redhat.com/downloads/[].
 . In the *A-Z* tab, click *Red Hat OpenStack Platform*.
 . Click the green *Download Latest* button to go to the OpenStack Platform download page.
 . Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
 +
-[NOTE]
+[IMPORTANT]
 ====
-Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
+Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes. The OpenStack Platform 14 conversion appliance can be used with both OpenStack Platform 13 and 14.
+====
 
-The OpenStack Platform 14 conversion appliance can be used with OpenStack Platform 13.
-====
 . Upload the appliance to Glance storage.
 . Deploy the appliance as a conversion host instance, with the following resources:
 +
@@ -72,5 +71,4 @@ For optimal performance:
 * Deploy the conversion hosts on more than one hypervisor.
 * Deploy the conversion hosts on a compute node with nested virtualization enabled (see link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]). Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
 
-
-You are ready to configure the conversion hosts (xref:Configuring_the_conversion_hosts[]).
+You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts] in CloudForms.
