--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -12,9 +12,9 @@ include::ref_Software_compatibility_requirements.adoc[]
 
 . Install Red Hat Virtualization Host  or Red Hat Enterprise Linux 7.6 on the host machines (see link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/installation_guide/#Installing_RHVH[Installing Red Hat Virtualization Host] or link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.3/html-single/installation_guide/#Red_Hat_Enterprise_Linux_Hosts[Installing Red Hat Enterprise Linux Hosts] in the _Red Hat Virtualization Installation Guide_).
 +
-Some of these hosts will be deployed as conversion hosts. The number of conversion hosts depends on your migration size and infrastructure (xref:Deciding_how_many_conversion_hosts_to_create[]).
+Some of these hosts will be deployed as conversion hosts. The number of conversion hosts depends on your migration size and infrastructure capabilities. See xref:Deciding_how_many_conversion_hosts_to_create[] for details.
 
-. Enable the following ports in the conversion host network (see https://access.redhat.com/articles/417343[] for details):
+. Enable the following ports in the conversion host network (see https://access.redhat.com/articles/417343[]):
 * 22 - SSH
 * 443 - CloudForms, Red Hat Virtualization Manager, and VDDK
 * 902 - CloudForms to VMware
@@ -35,7 +35,7 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 +
 [NOTE]
 ====
-Do not remove or change a provider (including refreshing RHV hosts) before, during, or after migration because these actions cause errors in infrastructure mappings and migration plans.
+Do not remove or change a provider (including refreshing RHV hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
 
-You are ready to configure the conversion hosts (xref:Configuring_the_conversion_hosts[]).
+You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts] in CloudForms.
