--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
-// assembly_Troubleshooting.adoc
+// proc_Creating_and_running_a_migration_plan.adoc
 [id="Retrying_a_failed_migration_plan"]
-= Retrying a failed migration plan
+= (Optional) Retrying a failed migration plan
 
 If a migration plan fails because of external factors, you can retry the migration:
 
@@ -9,5 +9,5 @@ If a migration plan fails because of external factors, you can retry the migrati
 . Delete newly created disks in the target datastore to free up space.
 . OpenStack Platform only: Delete newly created network ports of failed instances.
 . Click menu:Compute[Migration > Migration Plans].
-. Click `Migration Plans Complete`.
+. Click *Migration Plans Complete*.
 . Click the *Retry* button beside the failed migration plan.
