--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
@@ -1,55 +1,23 @@
 // Module included in the following assemblies:
-// assembly_Troubleshooting.adoc
+// assembly_Common_issues_and_mistakes.adoc
 [[Virtual_machine_migration_errors]]
 = Virtual machine migration errors
 
-If a virtual machine fails to migrate, check the following possible causes:
+.Source environment errors[[VMware_environment_errors]]
 
-* xref:IP_address_errors[]
-* xref:VMware_environment_errors[]
-* xref:RHV_VM_migration_failure[]
-* xref:OSP_VM_migration_failure[]
-
-[[IP_address_errors]]
-== IP address errors
-
-* Migrated virtual machine does not have an IP address:
-
-[[Migrated_VM_missing_IP]]
-** Check that link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] is installed on the source virtual machine.
-
-[[OSP_missing_IP]]
-** OpenStack Platform: Check the source virtual machine for an interface configuration file mapped to a non-existent interface (for example, `/etc/sysconfig/network-scripts/ifcfg-eth1` exists, but `eth1` interface does not).
-+
-[options="" subs="+quotes,verbatim"]
-----
-CalledProcessError: Command \'['openstack', u'--os-username=admin', u'--os-identity-api-version=3', u'--os-user-domain-name=default', u'--os-auth-url=http://_osp.example.com_:5000/v3', u'--os-project-name=admin', u'--os-password=\*\*******', u'--os-project-id=0123456789abcdef0123456789abcdef', \'port', \'create', \'--format', \'json', \'--network', u'01234567-89ab-cdef-0123-456789abcdef', \'--mac-address', u'00:50:56:01:23:45', \'--enable', u'port_0', \'--fixed-ip', \'*ip-address=None*'"]' returned non-zero exit status 1
-_date_ _time_:ERROR: Command output:
-BadRequestException: Unknown error
-----
-
-[[Migrated_RHEL_IP_address_not_accessible]]
-* All platforms: IP address of a migrated RHEL (or other Linux-based operating system) virtual machine is not accessible. Create a xref:Creating_a_rhel_premigration_playbook[`RHEL premigration` playbook] and add it to the xref:Advanced_options_screen[migration plan].
-
-[[VMware_environment_errors]]
-== VMware environment errors
-
-A VMware virtual machine cannot migrate if it has any of the following conditions:
+A source virtual machine cannot migrate if it has any of the following conditions:
 
 * Mounted ISO/CDROM disk
 * Encrypted disk
 * Invalid name (containing spaces or special characters)
 
-[[RHV_VM_migration_failure]]
-== Red Hat Virtualization errors
+.Target environment errors
 
-The following virtual machine migration errors are specific to Red Hat Virtualization:
+*Red Hat Virtualization*[[RHV_VM_migration_failure]]
 
-[[RHV_name_conflict]]
-* Virtual machine name duplicates an existing target virtual machine name.
+* Virtual machine name duplicates an existing target virtual machine name.[[RHV_name_conflict]]
 
-[[SSH_transformation_fails]]
-* SSH transformation failure: If you are using SSSD with single sign-on, SSH fails for the `vdsm` account. Reinstall `ipa-client` without configuring the OpenSSH client:
+* SSH transformation failure: If you are using SSSD with single sign-on, SSH fails for the `vdsm` account. Reinstall `ipa-client` without configuring the OpenSSH client:[[SSH_transformation_fails]]
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -57,23 +25,33 @@ The following virtual machine migration errors are specific to Red Hat Virtualiz
 # ipa-client-install --no-ssh
 ----
 +
-[NOTE]
-====
-You cannot resolve this issue by changing the configuration file because the file is restored during upgrades.
-====
+This issue cannot be resolved by changing the configuration file because the file is restored during upgrades.
 
-[[OSP_VM_migration_failure]]
-== OpenStack Platform errors
 
-The following virtual machine migration errors are specific to OpenStack Platform:
+*OpenStack Platform*[[OSP_VM_migration_failure]]
 
-[[OSP_VM_powered_off]]
-* Virtual machine powered off: The virtual machine must be powered on at the time of migration.
+* Virtual machine powered off: The virtual machine must be powered on at the time of migration.[[OSP_VM_powered_off]]
 
-[[OSP_not_authorized]]
-* Not Authorized: The OpenStack Platform `admin` user in CloudForms does not have `admin` role privileges within the target project.  link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[Add the `admin` user] as `member` and `admin` to your target project.
+* `disallowed by policy` error: The OpenStack Platform `admin` user in CloudForms does not have `admin` role privileges within the target project. Add the `admin` user as `member` and `admin` to your target project (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/users_and_identity_management_guide/#edit_a_project[Edit a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_). Log example:[[OSP_not_authorized]]
 +
 [options="" subs="verbatim"]
 ----
 ERROR: Command exited with non-zero return code 1, output: HttpException: 403: Client Error for url: https://123.123.123.123:13696/v2.0/ports, {"NeutronError": {"message": "((rule:create_port and rule:create_port:mac_address) and rule:create_port:fixed_ips) is disallowed by policy", "type": "PolicyNotAuthorized", "detail": ""}}
+----
+
+.Postmigration IP address errors[[IP_address_errors]]
+
+* If the IP address of a migrated RHEL (or other Linux-based operating system) virtual machine is not accessible. Create a xref:Creating_a_rhel_premigration_playbook[`RHEL premigration` playbook] and add it to the xref:Advanced_options_screen[migration plan].[[Migrated_RHEL_IP_address_not_accessible]]
+
+* If the migrated virtual machine does not have an IP address:[[Migrated_VM_missing_IP]]
+
+** Check that VMware Tools is installed on the source virtual machine.
+
+** OpenStack Platform: Check the source virtual machine for an interface configuration file mapped to a non-existent interface (for example, `/etc/sysconfig/network-scripts/ifcfg-eth1` exists, but `eth1` interface does not). Log example:[[OSP_missing_IP]]
++
+[options="" subs="+quotes,verbatim"]
+----
+CalledProcessError: Command \'['openstack', u'--os-username=admin', u'--os-identity-api-version=3', u'--os-user-domain-name=default', u'--os-auth-url=http://_osp.example.com_:5000/v3', u'--os-project-name=admin', u'--os-password=\*\*******', u'--os-project-id=0123456789abcdef0123456789abcdef', \'port', \'create', \'--format', \'json', \'--network', u'01234567-89ab-cdef-0123-456789abcdef', \'--mac-address', u'00:50:56:01:23:45', \'--enable', u'port_0', \'--fixed-ip', \'*ip-address=None*'"]' returned non-zero exit status 1
+_date_ _time_:ERROR: Command output:
+BadRequestException: Unknown error
 ----
