--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Infrastructure Migration Solution Guide (Working draft)
+= Infrastructure Migration Solution Guide (in progress)
 :imagesdir: images
 :vernum: 1.2
 :toc: left
